--- a/#source/scss/style.scss
+++ b/#source/scss/style.scss
@@ -941,48 +941,48 @@ body{
 
 // Секция с обратной связью
 
+.feedback{
+    background: url("./../../img/feedback-bg-dark.jpg");
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-top: 100px;
+    padding: 50px 0;
+}
 .feedback-grid{
     display: grid;
-    grid-template-columns: 7.5fr 4.5fr;
+    grid-template-columns: auto 1fr;
     gap: 20px;
     margin: 100px 0;
+    color: $base-color-light;
 }
 .wrap-feedback{
     width: 100%;
     display: flex;
     border-radius: 10px; 
     .wrap-feedback__content{
-        flex: 1 1 50%;
+        flex: 1 1 auto;
         display: flex;
         flex-direction: column;
         .wrap-feedback__title{
-            font-size: 30px;
+            font-size: 35px;
             max-width: 500px;
             text-wrap: balance;
-            font-weight: 500;
+            font-weight: 700;
             &.wrap-feedback__title-2{
                 margin-top: 10px;
+                font-weight: 700;
             }
         }
         .wrap-feedback__text{
             margin-top: 20px;
             font-size: 18px;
+            max-width: 600px;
+            font-weight: 500;
         }
         .wrap-feedback__btn{
             margin-top: auto;
             margin-right: auto;
-        }
-    }
-    .wrap-feedback__img{
-        flex: 0 1 400px;
-        height: 400px;
-        border-radius: 10px;
-        overflow: hidden;
-        img{
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            object-position: center;
         }
     }
 }
@@ -992,7 +992,8 @@ body{
     gap: 20px;
     .accordion__item{
         width: 100%;
-        background-color: gainsboro;
+        background-color: rgba(139, 139, 139, 0.3);
+        backdrop-filter: blur(2px);
         border-radius: 10px;
         height: auto;
         .accordion__head{
@@ -1013,7 +1014,7 @@ body{
             .accordion__icon::before{
                     content: '\f054';
                     font-size: 25px;
-                    color:$base-color-dark;
+                    color:$base-color-light;
                     font-weight: 900;
                     font-family: $awesome-font;
             }
